# PhysiClaw

./: .gitignore  OMNIPARSER_INTEGRATION.md  PhysiClaw_Report.md  QWERTY_KEYBOARD_DETECTOR_PLAN.md  README.md  calibrate.py  camera.py  demo_agent.py  find_grbl_port.py  grbl_device.py  main.py  phone_detect.py  physiclaw_architecture_plan.md  physiclaw_server.py  physiclaw_vlm_tap_plan.md  pyproject.toml  stylus_arm.py  vision.py
.claude/: CLAUDE.md
.claude/ui-presets/: system-keyboard.md
agent/hooks/: __init__.py  cron.py  poll.py
agent/runtime/: __init__.py  __main__.py  claude.py  hook.py  runtime.py
physiclaw/: __init__.py  annotation.py  bridge.py  calibrate.py  camera.py  cli.py  color_segment.py  core.py  grid_calibrate.py  icon_detect.py  keyboard.py  main.py  ocr.py  plan_calibrate.py  robustness.py  screen_match.py  screenshot.py  serial_probe.py  server.py  stylus_arm.py  vision.py
physiclaw/annotation/: __init__.py  bbox.py  handler.py  state.py
physiclaw/bridge/: __init__.py  calib.py  calibration_state.py  handler.py  net.py  nonce.py  page.py  phone.py  phone_state.py  protocol.py  routes.py  state.py
physiclaw/calibration/: __init__.py  calibrate.py  grid_calibrate.py  handler.py  plan_calibrate.py  routes.py  state.py  transforms.py
physiclaw/core/: __init__.py  orchestrator.py  rendering.py
physiclaw/engine/: ENGINE.md  build_prompt_plan.md
physiclaw/hardware/: __init__.py  arm.py  camera.py  handler.py  (+5 more)
scripts/: calibrate.py  calibrate_keyboard.py  demo_agent.py  download_omniparser.py  setup.py  stylus_gen.py  stylus_holder.py
(+55 files in other folders)
