[project]
name = "physiclaw"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyserial>=3.5", "opencv-python>=4.8", "numpy>=1.26", "mcp[cli]>=1.2"]

[dependency-groups]
stylus = ["manifold3d>=3.4.0", "trimesh>=4.11.4"]
drawing = ["reportlab>=4.4.10", "fonttools>=4.62"]